force-app/main/default/objects/Benchmark__c/Benchmark__c.object-meta.xml
<CustomObject>
    <description
	>Used by Salesforce Development teams to measure org health and performance. Each record represents the performance of a specific operation at a specific point in time.</description>
    <label>Benchmark</label>
    <nameField>
        <displayFormat>B-{000000000}</displayFormat>
        <label>Benchmark Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benchmarks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>