force-app/main/default/objects/Benchmark__c/fields/BenchmarkCompletedAt__c.field-meta.xml
<CustomField>
    <fullName>BenchmarkCompletedAt__c</fullName>
    <description
	>Indicates the time in the job run that the benchmark() method was completed. This is used to calculate Benchmark Duration.</description>
    <label>Benchmark Completed At (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>