force-app/main/default/objects/Benchmark__c/fields/BenchmarkDateTime__c.field-meta.xml
<CustomField>
    <fullName>BenchmarkDateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <inlineHelpText
	>The Date/Time that the Benchmark was processed. Defaults to the CreatedDate value, but can be overridden (ex., to support data loads from expired sandboxes).</inlineHelpText>
    <label>Benchmark Date/Time</label>
    <type>DateTime</type>
</CustomField>