force-app/main/default/objects/Benchmark__c/fields/BenchmarkDuration__c.field-meta.xml
<CustomField>
    <fullName>BenchmarkDuration__c</fullName>
    <formula>IF(
  NOT(ISBLANK(BenchmarkCompletedAt__c)), 
  BenchmarkCompletedAt__c - BenchmarkStartedAt__c,
  null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates the total amount of time (in milliseconds) that the benchmark method took to complete.
Most reports should key off of this field to demonstrate the performance of benchmarks over time.</inlineHelpText>
    <label>Benchmark Duration (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>