force-app/main/default/objects/Benchmark__c/fields/BenchmarkStartedAt__c.field-meta.xml
<CustomField>
    <fullName>BenchmarkStartedAt__c</fullName>
    <description
	>Indicates the time in the job run that the benchmark() method was called. This is used to calculate Benchmark Duration.</description>
    <label>Benchmark Started At (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>