force-app/main/default/objects/Benchmark__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A description of the benchmarking job and what it tests.
This value is derived from the corresponding BenchmarkJobSetting__mdt record.</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>