force-app/main/default/objects/Benchmark__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Displays the error type, if any exceptions were thrown during the benchmark job.</description>
    <label>Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>