force-app/main/default/objects/Benchmark__c/fields/ErrorDetail__c.field-meta.xml
<CustomField>
    <fullName>ErrorDetail__c</fullName>
    <description
	>The full error detail, including message and stack trace, of any exceptions thrown during job execution.</description>
    <label>Error Detail</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>