force-app/main/default/objects/Benchmark__c/fields/ErrorLocation__c.field-meta.xml
<CustomField>
    <fullName>ErrorLocation__c</fullName>
    <formula>IF(
  ISBLANK(Error__c),
  null,
  IF(
    NOT(ISBLANK(BenchmarkStartedAt__c)),
    &quot;benchmark()&quot;,
    IF(
      NOT(ISBLANK(SetupStartedAt__c)),
      &quot;setup()&quot;,
      &quot;Unknown&quot;
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates at what point in the job an error was thrown.</inlineHelpText>
    <label>Error Location</label>
    <type>Text</type>
</CustomField>