force-app/main/default/objects/Benchmark__c/fields/HasErrors__c.field-meta.xml
<CustomField>
    <fullName>HasErrors__c</fullName>
    <description>Indicates if any errors were thrown during the execution of the job</description>
    <formula>NOT(ISBLANK(Error__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Errors?</label>
    <type>Checkbox</type>
</CustomField>