force-app/main/default/objects/Benchmark__c/fields/JobLabel__c.field-meta.xml
<CustomField>
    <fullName>JobLabel__c</fullName>
    <description>The Name of the BenchmarkJobSetting__mdt record that corresponds with this record.</description>
    <label>Job Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>