force-app/main/default/objects/Benchmark__c/fields/JobName__c.field-meta.xml
<CustomField>
    <fullName>JobName__c</fullName>
    <description>The DeveloperName of the BenchmarkJobSetting__mdt record that corresponds to this record.</description>
    <label>Job Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>