force-app/main/default/objects/Benchmark__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description
	>The type of operation being benchmarked. This value is derived from the corresponding BenchmarkJobSetting__mdt record.</description>
    <label>Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>