force-app/main/default/objects/Benchmark__c/fields/SetupCompletedAt__c.field-meta.xml
<CustomField>
    <fullName>SetupCompletedAt__c</fullName>
    <inlineHelpText
	>Indicates the time in the job run that the setup() method finished running. This is used to calculate Setup Duration.</inlineHelpText>
    <label>Setup Completed At (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>