force-app/main/default/objects/Benchmark__c/fields/SetupDuration__c.field-meta.xml
<CustomField>
    <fullName>SetupDuration__c</fullName>
    <formula>IF(
  NOT(ISBLANK(SetupCompletedAt__c)),
  SetupCompletedAt__c  - SetupStartedAt__c,
  null
)</formula>
    <inlineHelpText
	>Indicates the total amount of time (in milliseconds) that the setup method took to complete.</inlineHelpText>
    <label>Setup Duration (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>