force-app/main/default/objects/Benchmark__c/fields/SetupStartedAt__c.field-meta.xml
<CustomField>
    <fullName>SetupStartedAt__c</fullName>
    <inlineHelpText
	>Indicates the time in the job run that the setup() method was called. This is used to calculate &quot;Setup Duration&quot;.</inlineHelpText>
    <label>Setup Started At (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>