force-app/main/default/objects/Benchmark__c/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <description>The type of SObject record being benchmarked. 
This value is derived from the corresponding BenchmarkJobSetting__mdt record.</description>
    <label>SObjectType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>