force-app/main/default/objects/Benchmark__c/fields/SObjectTypeOperation__c.field-meta.xml
<CustomField>
    <fullName>SObjectTypeOperation__c</fullName>
    <description>Concatenates the SObjectType &amp; Operation fields together, for grouping in reports.</description>
    <formula>IF(
  AND(
    NOT(ISBLANK(SObjectType__c)),
    NOT(ISBLANK(Operation__c))
  ),
  /* Concatenate both values w/a colon separator */
  SObjectType__c + &quot;: &quot; + Operation__c,
  /* Display whichever value is not null */
  SObjectType__c + Operation__c
)</formula>
    <label>SObjectType &amp; Operation</label>
    <type>Text</type>
</CustomField>