force-app/main/default/objects/Benchmark__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JobLabel__c</columns>
    <columns>SObjectType__c</columns>
    <columns>Operation__c</columns>
    <columns>BenchmarkDuration__c</columns>
    <columns>Error__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>